--- a/jquery.btree/jquery.btree.scss
+++ b/jquery.btree/jquery.btree.scss
@@ -6,31 +6,25 @@
 	display: none;
 }
 
-.easytree-container
-{
+.easytree-container {
 	font-family: tahoma, arial, helvetica;
-	font-size: 10pt; /* font size should not be too big */
+	font-size: 14px; /* font size should not be too big */
 	white-space: nowrap;
 	padding: 3px;
 	margin: 0; /* issue 201 */
-	background-color: #FCFCFC;
+	background-color: white;
 	border: 1px dotted gray;
 	overflow: auto;
 	height: 100%; /* issue 263 */
+
+	&:focus { outline: none; }
 }
 
-.easytree-container:focus {
-    outline: none;
-}
-
-ul.easytree-container ul
-{
-	padding: 0 0 0 16px;
+ul.easytree-container ul {
+	padding: 0;
 	margin: 0;
-}
 
-.easytree-container ul:focus {
-    outline: none;
+	&:focus { outline: none; }
 }
 
 ul.easytree-container li
@@ -47,26 +41,51 @@ ul.easytree-container li
 	background-repeat: repeat-y;
 	background-image: none;  /* no v-lines */
 
-	margin:0;
-	padding:1px 0 0 0;
+	margin: 0;
+	padding: 0;
 }
+
 /* Suppress lines for last child node */
-ul.easytree-container li.easytree-lastsib
-{
+ul.easytree-container li.easytree-lastsib {
 	background-image: none;
 }
+
 /* Suppress lines if level is fixed expanded (option minExpandLevel) */
-ul.easytree-no-connector > li
-{
+ul.easytree-no-connector > li {
 	background-image: none;
 }
 
 /* Style, when control is disabled */
-.ui-easytree-disabled ul.easytree-container
-{
+.ui-easytree-disabled ul.easytree-container {
 	opacity: 0.5;
-/*	filter: alpha(opacity=50); /* Yields a css warning */
 	background-color: silver;
+	/*	filter: alpha(opacity=50); /* Yields a css warning */
+}
+
+/*******************************************************************************
+ * Node style and hover style
+ */
+.easytree-node {
+  display: block;
+  white-space: nowrap;
+  text-decoration: none;
+  border: 1px solid #fff;
+  border-width: 1px 0;
+  color: #2974B6;
+  cursor: pointer;
+  padding: 4px 0;
+  margin: 0;
+}
+
+.easytree-node:hover {
+  background: #f4f9fd;
+  border-color: #e5f0fb;
+}
+
+.easytree-node.easytree-active
+{
+  background: #e5f0fb;
+  border-color: #BBD4EF #fff;
 }
 
 
@@ -232,7 +251,6 @@ span.easytree-icon /* Default icon */
 	vertical-align: top;
 	margin: 0px;
 	margin-left: 3px;
-/*    border: 1px solid #FCFCFC; /* reserve some space for status borders (Note: 'transparent' would not work in IE6) */
 	border: 1px solid transparent; /* reserve some space for status borders */
 	border-radius: 3px;
 	text-decoration: none;
@@ -242,25 +260,25 @@ span.easytree-icon /* Default icon */
     text-decoration: none;
     color: inherit;
 }
-.easytree-title:hover
-{
-	border-color: #D8F0FA; /* darker light blue */
-	background: #f8fcfe; /* Old browsers */
-	background: -moz-linear-gradient(top, #f8fcfe 0%, #eff9fe 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8fcfe), color-stop(100%,#eff9fe)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, #f8fcfe 0%,#eff9fe 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, #f8fcfe 0%,#eff9fe 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top, #f8fcfe 0%,#eff9fe 100%); /* IE10+ */
-	background: linear-gradient(to bottom, #f8fcfe 0%,#eff9fe 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f8fcfe', endColorstr='#eff9fe',GradientType=0 ); /* IE6-9 */
-}
+//.easytree-title:hover
+//{
+	// border-color: #D8F0FA; /* darker light blue */
+	// background: #f8fcfe; /* Old browsers */
+	// background: -moz-linear-gradient(top, #f8fcfe 0%, #eff9fe 100%); /* FF3.6+ */
+	// background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8fcfe), color-stop(100%,#eff9fe)); /* Chrome,Safari4+ */
+	// background: -webkit-linear-gradient(top, #f8fcfe 0%,#eff9fe 100%); /* Chrome10+,Safari5.1+ */
+	// background: -o-linear-gradient(top, #f8fcfe 0%,#eff9fe 100%); /* Opera 11.10+ */
+	// background: -ms-linear-gradient(top, #f8fcfe 0%,#eff9fe 100%); /* IE10+ */
+	// background: linear-gradient(to bottom, #f8fcfe 0%,#eff9fe 100%); /* W3C */
+	// filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f8fcfe', endColorstr='#eff9fe',GradientType=0 ); /* IE6-9 */
+//}
 
 span.easytree-folder .easytree-title
 {
 /*	font-weight: bold; */
 }
 
-span.easytree-focused span.easytree-title
+span.easytree-focused .easytree-title
 {
 	outline: 1px dotted black;
 }
@@ -468,18 +486,18 @@ table.easytree-ext-columnview tbody tr td {
 	vertical-align: top;
 	overflow: auto;
 }
-table.easytree-ext-columnview span.easytree-node {
-	display: inline-block;
-	width: 100%;
+
+table.easytree-ext-columnview .easytree-node {
 }
-table.easytree-ext-columnview span.easytree-node a{
+
+table.easytree-ext-columnview .easytree-node a {
 	border: 1px solid transparent;
 	background-color: transparent;
 }
-table.easytree-ext-columnview span.easytree-node.easytree-expanded {
+table.easytree-ext-columnview .easytree-node.easytree-expanded {
 	background-color: #ccc;
 }
-table.easytree-ext-columnview span.easytree-node.easytree-active {
+table.easytree-ext-columnview .easytree-node.easytree-active {
 	background-color: royalblue;
 }
 
@@ -487,15 +505,15 @@ table.easytree-ext-columnview span.easytree-node.easytree-active {
 /*******************************************************************************
  * 'filter' extension
  */
-.easytree-ext-filter span.easytree-node .easytree-title {
+.easytree-ext-filter .easytree-node .easytree-title {
 	color: silver;
 	font-weight: lighter;
 }
-.easytree-ext-filter span.easytree-node.easytree-submatch .easytree-title {
+.easytree-ext-filter .easytree-node.easytree-submatch .easytree-title {
 	color: black;
 	font-weight: normal;
 }
-.easytree-ext-filter span.easytree-node.easytree-match .easytree-title {
+.easytree-ext-filter .easytree-node.easytree-match .easytree-title {
 	color: black;
 	font-weight: bold;
 }
