--- a/jquery.btree/jquery.treeSelect.scss
+++ b/jquery.btree/jquery.treeSelect.scss
@@ -1,48 +1,75 @@
 // Tree Dropdown Panel Style
-.treedd-container {
+.tree-selectbox {
   display: inline-block;
   background-color: #fff;
-  border: 1px solid #ccc;
   min-width: 78px;
 
   border-radius: 4px;
-  -webkit-radius: 4px;
-  -moz-radius: 4px;
+  border: 1px solid #ccc;
 
-  .treedd-choice {
+  .ts-choice {
     font-size: 1em;
     line-height: 1em;
-    height: 34px;
+    height: 32px;
     cursor: pointer;
   }
 
-  .treedd-choice > .treedd-text {
+  .ts-choice > .ts-text {
     display: inline-block;
     min-width: 50px;
-    height: 24px;
+    height: 22px;
     padding: 5px 10px;
   }
 
-  .treedd-choice > .treedd-empty {
+  .ts-choice > .ts-empty {
     display: none;
     width: 15px;
-    height: 15px;
+    height: 14px;
     vertical-align: top;
     cursor: pointer;
     text-align: center;
     margin: 9px auto;
   }
 
-  .tdd-body {
-    display: none;
+  &.selectbox-on {
+    border-top-color: #66afe9;
+    border-left-color: #66afe9;
+    border-right-color: #66afe9;
+    border-bottom-color: #e9e9e9;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+  }
+
+}
+
+// TreeView Panel Container
+.tree-selectbox-panel {
+  display: none;
+  position: absolute;
+  top: 100%;
+  z-index: 99999;
+  background-color: white;
+
+  border-radius: 0 0 4px 4px;
+
+  border-left: 1px solid #66afe9;
+  border-right: 1px solid #66afe9;
+  border-bottom: 1px solid #66afe9;
+
+  box-shadow: 0 4px 5px rgba(0,0,0,0.15);
+  -webkit-box-shadow: 0 4px 5px rgba(0,0,0,0.15);
+  -moz-box-shadow: 0 4px 5px rgba(0,0,0,0.15);
+
+  .tp-body {
+    display: block;
     margin: 0;
     padding: 5px;
     height: 200px;
     overflow: auto;
   }
 
-  .tdd-footer {
-    display: none;
+  .tp-footer {
+    display: block;
     border-top: 1px solid #E9E9E9;
     padding: 8px;
 
@@ -71,21 +98,10 @@
       text-decoration: none;
     }
   }
+
 }
 
-.treedd-container.treedd-container-on {
-  border-color: #66afe9;
-
-  .treedd-choice {
-    border-bottom: 1px solid #E9E9E9;
-  }
-
-  .tdd-body,
-  .tdd-footer
-  {
-    display: block;
-  }
-}
+// ==========================================================
 
 // The TreeView Style
 .ui-helper-hidden {
