--- a/jquery.btree/jquery.treeSelect.scss
+++ b/jquery.btree/jquery.treeSelect.scss
@@ -88,6 +88,9 @@
       background-color: #3e9ad6;
       margin-left: 8px;
       padding: 5px 10px;
+      border-radius: 2px;
+      -webkit-border-radius: 2px;
+      -moz-border-radius: 2px;
     }
 
     a:hover {
