--- a/jquery.btree/jquery.treeSelect.scss
+++ b/jquery.btree/jquery.treeSelect.scss
@@ -21,6 +21,9 @@
     font-size: 14px;
     line-height: 32px;
     padding: 0px 10px;
+    border: 0;
+    margin: 0;
+    box-sizing: border-box;
   }
 
   .ts-choice > .ts-empty {
