fix the empty expander

--- a/jquery.btree/jquery.treeSelect.scss
+++ b/jquery.btree/jquery.treeSelect.scss
@@ -187,7 +187,8 @@ span.simpletree-empty {
   vertical-align: middle;
 }
 
-span.simpletree-expander {
+span.simpletree-expander,
+span.simpletree-empty {
   display: inline-block;
   margin: 0 3px;
   width: 15px;
